# pastewatch

./: .gitignore  README.md  SIGNED.md  cabal.config  notes.txt  pastewatch.cabal  pastewatch.hs  sample.config
assets/ekg/assets/: index.html  monitor.js
extras/: build-deb.sh  ubuntu_init_script.sh
src/PasteWatch/: Alert.hs  Config.hs  Core.hs  Sites.hs  Types.hs  Utils.hs
tests/: pastetests.hs
