name:                pastewatch
category:            web
version:             1.0.1
license:             GPL-3
license-file:        license.txt
description:         Code to watch paste sites and alert on pastes of interest
synopsis:            Code to watch paste sites and alert on pastes of interest
author:              Arthur Clune
maintainer:          arthur@clune.org
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type:  git
  location: https://github.com/ArthurClune/pastewatch.git

executable pastewatch
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -O2 -funbox-strict-fields
  main-is:             pastewatch.hs
  build-depends:       base ==4.5.*, pastewatch

Library
    Exposed-Modules:  PasteWatch.Alert, PasteWatch.Config, PasteWatch.Core,
                      PasteWatch.Sites, PasteWatch.Types,
                      PasteWatch.Utils
    hs-source-dirs:   src
    default-language: Haskell98
    Build-depends:    attoparsec, base, bytestring, configurator, deepseq, deepseq-generics,
                      ekg, errors, ghc-prim, HandsomeSoup, hashable,
                      hashable-generics, hslogger, HTTP,
                      hxt, mongoDB, mtl, network,  old-locale, old-time, parallel-io,
                      random, safe, stm, SMTPClient,
                      stm, text, time, transformers, unordered-containers
    ghc-options:      -Wall -O2 -funbox-strict-fields

Test-suite pastewatch-tests
  Type:              exitcode-stdio-1.0
  Main-is:           pastetests.hs
  default-language:  Haskell2010
  hs-source-dirs:    tests
  Build-depends:     base, HUnit, pastewatch, text
