name:                pastewatch
category:            web
version:             1.1.5
license:             GPL-3
license-file:        license.txt
description:         Code to watch paste sites and alert on pastes of interest
synopsis:            Code to watch paste sites and alert on pastes of interest
author:              Arthur Clune
maintainer:          arthur@clune.org
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type:  git
  location: https://github.com/ArthurClune/pastewatch.git

executable pastewatch
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -O2 -funbox-strict-fields
  main-is:             pastewatch.hs
  build-depends:       base,
                       pastewatch

Library
    Exposed-Modules:  PasteWatch.Config,
                      PasteWatch.Core,
                      PasteWatch.Sites,
                      PasteWatch.Types,
                      PasteWatch.Utils
    hs-source-dirs:   src
    default-language: Haskell98
    Build-depends:    base,
                      bson,
                      bytestring,
                      configurator,
                      deepseq,
                      deepseq-generics,
                      ekg,
                      errors,
                      ghc-prim,
                      hashable,
                      hslogger,
                      HTTP,
                      HandsomeSoup,
                      hxt,
                      hxt-tagsoup,
                      mongoDB,
                      mtl,
                      network,
                      network-uri,
                      old-locale,
                      old-time,
                      parallel-io,
                      random,
                      text-icu,
                      safe,
                      stm,
                      smtp-mail,
                      stm,
                      text,
                      time,
                      transformers,
                      unordered-containers
    ghc-options:      -Wall -O2 -funbox-strict-fields

Test-suite pastewatch-tests
  Type:              exitcode-stdio-1.0
  Main-is:           pastetests.hs
  default-language:  Haskell2010
  hs-source-dirs:    tests
  Build-depends:     base,
                     HUnit,
                     pastewatch,
                     text
